<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout5"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Detail">

    <!-- TODO: Update blank fragment layout -->


    <ScrollView
        android:id="@+id/detail_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@android:color/holo_blue_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_btn">

        <TableLayout
            android:id="@+id/detail_table"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:id="@+id/title1"
                android:layout_width="match_parent"
                android:layout_height="@dimen/btn_height"
                android:background="@android:color/holo_orange_light">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="@dimen/info_width"
                    android:layout_height="@dimen/btn_height"
                    android:background="@android:color/holo_orange_light"
                    android:gravity="center"
                    android:text="@string/col_title0"
                    android:textSize="@dimen/info_textsize" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="@dimen/calorie_value_width"
                    android:layout_height="@dimen/btn_height"
                    android:background="@android:color/holo_orange_light"
                    android:gravity="center"
                    android:text="@string/calories_str"
                    android:textSize="@dimen/info_textsize" />
            </TableRow>

            <TableRow
                android:id="@+id/title2"
                android:layout_width="match_parent"
                android:layout_height="@dimen/btn_height"
                android:background="@android:color/holo_orange_light">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/btn_height"
                    android:background="@android:color/holo_orange_light"
                    android:gravity="center"
                    android:text="@string/carb_str"
                    android:textSize="@dimen/info_textsize" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/btn_height"
                    android:background="@android:color/holo_orange_light"
                    android:gravity="center"
                    android:text="@string/protein_str"
                    android:textSize="@dimen/info_textsize" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="@dimen/std_width"
                    android:layout_height="@dimen/btn_height"
                    android:background="@android:color/holo_orange_light"
                    android:gravity="center"
                    android:text="@string/fats_str"
                    android:textSize="@dimen/info_textsize" />
            </TableRow>
        </TableLayout>
    </ScrollView>

    <Button
        android:id="@+id/home_btn"
        android:layout_width="@dimen/info_width"
        android:layout_height="wrap_content"
        android:text="@string/return_str"
        android:textSize="@dimen/btn_textsize"
        app:layout_constraintBottom_toTopOf="@+id/detail_list"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/clear_btn"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/clear_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/clear_str"
        android:textSize="@dimen/btn_textsize"
        app:layout_constraintBottom_toTopOf="@+id/detail_list"
        app:layout_constraintEnd_toStartOf="@+id/home_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>